<resources>
    <string name="app_name">DC Estágios</string>
    <string name="login_">Login.</string>
    <string name="titulo_filtragem">Filtragem.</string>
    <string name="subtitulo_filtragem">Com base nas suas preferências, defina aqui as informações que mais são do seu interesse</string>

    <string name="titulo_novavaga">Nova Vaga.</string>
    <string name="subtitulo_novavaga">Insira os detalhes da sua nova vaga, ela poderá ser consultada por todos os estágiarios e empresas cadastrados na plataforma</string>
    <string name="subtitulo_editarvaga">Insira os novos detalhes da sua vaga, ela poderá ser consultada por todos os estágiarios e empresas cadastrados na plataforma</string>
    <string name="area_conhecimento">Área de Conhecimento</string>
    <string name="descricao">Descrição</string>
    <string name="localidade">Localidade</string>
    <string name="cidade">Ribeirão Preto</string>
    <string name="anunciante">Anunciante</string>
    <string name="detalhes_vaga">Detalhes da Vaga</string>
    <string name="tipoVaga">Tipo de vaga</string>
    <string name="remuneracao">Remuneração</string>
    <string name="valor_remuneracao">R$1500</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="titulo_vaga">Titulo da Vaga</string>
    <string name="filtrar">Filtrar</string>
    <string name="data_inicio">Data Inicio</string>
    <string name="data_fim">Data Fim</string>
    <string name="criar_vaga">Criar Vaga</string>
    <string name="nome_vaga">Desenvolvedor Mobile</string>
    <string name="nome_empresa">Engenharia Ramos</string>
    <string name="titulo_empresa">Empresa</string>
    <string name="titulo_contato">Contato</string>
    <string name="candidatar">Candidatar-se</string>
    <string name="descricao_exemplo">\u2022 Estamos em busca de um estagiário em desenvolvimento mobile para integrar a equipe de desenvolvimento de aplicativos. O candidato selecionado irá trabalhar em projetos de desenvolvimento de aplicativos para dispositivos móveis, auxiliando na análise, desenvolvimento e implementação de novas funcionalidades, bem como na manutenção e suporte de sistemas já existentes.
\n \u2022 Será necessário possuir conhecimentos em linguagens de programação como Java ou Kotlin, e familiaridade com plataformas de desenvolvimento como Android Studio. Além disso, o estagiário terá a oportunidade de trabalhar em equipe, aprender novas tecnologias e participar de projetos desafiadores em um ambiente de trabalho dinâmico e inovador.</string>
    <string name="titulo_tipoconta">Tipo de Conta</string>
    <string name="subtitulo_tipoconta">Escolha o tipo da sua conta, depois de criada não será possível modificar</string>
    <string name="estudante">Eu sou estudante</string>
    <string name="frase_estudante">Acesse as vagas de estágio e encontre as melhores oportunidades do mercado</string>
    <string name="frase_anunciante">Cadastre as suas vagas de estágio e encontre profissionais competentes</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="empresa">Eu sou anunciante</string>
    <string name="esqueceu_senha">Esqueceu \nsua senha?</string>
    <string name="subtitulo_esqueceu_senha">Não se preocupe. Por favor,  Insira abaixo o email associado a sua conta.</string>
    <string name="enviar">Enviar Instruções</string>
    <string name="redefinir">Redefinir Senha</string>
    <string name="titulo_redefinir">Redefina a \nsua senha</string>
    <string name="titulo_detalhes_vaga">Detalhes da Vaga</string>
    <string-array name="opcoes_spinner_areaConhecimento">
        <item>Todos</item>
        <item>Tecnologia</item>
        <item>Engenharia</item>
        <item>Saúde</item>
        <item>Educação</item>
        <item>Admnistração</item>
        <item>Construção</item>
    </string-array>
    <string-array name="opcoes_spinner_localidade">
        <item>Todos</item>
        <item>Localidade 1</item>
        <item>Localidade 2</item>
        <item>Localidade 3</item>
    </string-array>
    <string-array name="opcoes_spinner_anunciante">
        <item>Todos</item>
        <item>Anunciante 1</item>
        <item>Anunciante 2</item>
        <item>Anunciante 3</item>
    </string-array>
    <string-array name="opcoes_spinner_tipoVaga">
        <item>Todos</item>
        <item>Remoto</item>
        <item>Presencial</item>
        <item>Híbrido</item>
    </string-array>
    <string-array name="opcoes_spinner_remuneracao">
        <item>Todos</item>
        <item>Até R$1000</item>
        <item>R$1001 a R$2000</item>
        <item>Mais de R$2000</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <attr name="queryTextColor" format="color" />
</resources>