<?xml version="1.0" encoding="utf-8"?>
<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ActivityTipoConta">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        tools:context=".ActivityTipoConta">
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/principal"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back_svg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titulo_tipoConta"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:includeFontPadding="false"
            android:layout_marginTop="40dp"
            android:text="@string/titulo_tipoconta"
            android:textAppearance="@style/login_"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintEnd_toStartOf="@id/subtitulo_tipoConta"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <TextView
            android:id="@+id/subtitulo_tipoConta"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:textSize="14sp"
            android:text="@string/subtitulo_tipoconta"
            android:textAppearance="@style/subtitulo"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/titulo_tipoConta"
            app:layout_constraintLeft_toLeftOf="@id/titulo_tipoConta" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_tipoConta"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/subtitulo_tipoConta"
            android:background="@drawable/fundo_tipovaga"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="onTipoContaClick"
            >

            <TextView
                android:id="@+id/tipo_estudante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estudante"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@+id/layout_tipoConta"
                app:layout_constraintStart_toStartOf="@id/layout_tipoConta"
                android:textColor="@color/texto"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/texto_estudante"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/frase_estudante"
                android:layout_marginBottom="25dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="@id/layout_tipoConta"
                app:layout_constraintBottom_toBottomOf="@id/layout_tipoConta"
                android:textColor="@color/texto_escuro"
                android:textSize="12sp"
                 />

            <ImageView
                android:id="@+id/estudante_svg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/estudante"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="@id/layout_tipoConta"
                app:layout_constraintEnd_toEndOf="@+id/layout_tipoConta" />

           </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_tipoConta2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_tipoConta"
            android:background="@drawable/fundo_tipovaga"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tipo_anunciante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empresa"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@+id/layout_tipoConta2"
                app:layout_constraintStart_toStartOf="@id/layout_tipoConta2"
                android:textColor="@color/texto"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/texto_anunciante"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/frase_anunciante"
                android:layout_marginBottom="25dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="@id/layout_tipoConta2"
                app:layout_constraintBottom_toBottomOf="@id/layout_tipoConta2"
                android:textColor="@color/texto_escuro"
                android:textSize="12sp"
                />

            <ImageView
                android:id="@+id/anunciante_svg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/empresa"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="@id/layout_tipoConta2"
                app:layout_constraintEnd_toEndOf="@+id/layout_tipoConta2" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_filtrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_rounded"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/prosseguir"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/layout_tipoConta2"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
