<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ActivityEsqueceuSenha">
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/principal"
            />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_back_svg"
            android:layout_gravity="start"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/esquecisenha_svg"
            android:layout_marginTop="40dp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="40dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_retangulo_detalhe"/>

            <TextView
                android:id="@+id/esqueceuSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esqueceu_senha"
                android:textAppearance="@style/login_"
                android:paddingStart="4dp"
                android:includeFontPadding="false"
                android:textStyle="bold"
                android:textColor="@color/texto"
                />

            <TextView
                android:id="@+id/login_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo_esqueceu_senha"
                android:textAppearance="@style/subtitulo"
                android:layout_marginTop="100dp"
                android:paddingStart="4dp"
                android:includeFontPadding="false"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_svg" />

            <EditText
                android:id="@+id/email_recupera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:textColor="@color/texto"
                android:hint="Digite o seu e-mail"
                android:textColorHint="@color/inserção"
                style="@style/EditTextStyle"
                android:paddingBottom="15dp"
                android:textSize="16sp"

                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/btn_recupera"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/enviar"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
