<?xml version="1.0" encoding="utf-8"?>
<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ActivityDetalhesVaga">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        tools:context=".ActivityNovaVaga">
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/texto"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back2_svg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titulo_detalhesVaga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:includeFontPadding="false"
            android:text="@string/titulo_detalhes_vaga"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/texto"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fundo_vaga1"
            app:layout_constraintTop_toBottomOf="@+id/titulo_detalhesVaga"
            android:layout_marginTop="20dp">


        </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout
            android:id="@+id/framelayout_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/titulo_detalhesVaga"
            android:layout_marginTop="200dp">
            <TextView
                android:id="@+id/tv_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="16dp"
                android:text="@string/descricao"
                android:textColor="@color/texto"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/framelayout_localidade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/textarea_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:spinnerMode="dropdown"
                android:textColor="@color/opcao_dropdown"
                android:hint="Digite o texto aqui"
                android:textColorHint="@color/opcao_dropdown"
                android:inputType="textMultiLine"
                android:lines="5"
                android:gravity="top"
                android:scrollHorizontally="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/borda_dropdown"
                />

        </FrameLayout>





    <Button
        android:id="@+id/btn_filtrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_rounded"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/criar_vaga"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/framelayout_descricao"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
